--- a/mainPageCafe/homePage.html
+++ b/mainPageCafe/homePage.html
@@ -30,7 +30,7 @@
             <a href="#"><li class="twoliButton">Shop</li></a>
             <a href="#"><li class="twoliButton">History</li></a>
             <a href="#"><li class="twoliButton">Theatre</li></a>
-            <a href="#"><li class="twoliButton">Class</li></a>
+            <a href="#"><li class="twoliButton">Classes</li></a>
           </ul>
         </div>
       </div>
