--- a/mainPageCafe/homePage.html
+++ b/mainPageCafe/homePage.html
@@ -9,6 +9,7 @@
   </head>
   <body>
   <div>
+    <!--top login bar-->
      <div class="loginBar">
        <div>
          <ul class="login">
@@ -24,6 +25,7 @@
          </ul>
        </div>
      </div>
+     <!--second menue bar-->
       <div class="secondBar">
         <div>
           <ul class="twologin">
@@ -34,6 +36,7 @@
           </ul>
         </div>
       </div>
+      <!--third menue bar-->
         <div class="thirdBar">
           <div>
             <ul class="threelogin">
@@ -45,12 +48,15 @@
             </ul>
           </div>
         </div>
+        <!--main img box bar-->
       <div class="main">
       </div>
+      <!--logobox container and img bax-->
       <div class="logo">
         <div class="logoCircle">
         </div>
       </div>
+      <!--addbox and text-->
       <div class="admenue">
         <h2 class="adtext">TEXT HERE</h2>
         <h3 class="adtext2">more text more.. more..Vivamus suscipit tortor eget felis porttitor volutpat. Nulla quis lorem ut libero malesuada feugiat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Quisque velit nisi, pretium ut lacinia in, elementum id enim.</h3>
