image path update2

--- a/mainPageCafe/homePage.html
+++ b/mainPageCafe/homePage.html
@@ -53,11 +53,11 @@
         <!--main img box bar-->
         <div class="slideshow">
 			  <div class="main" style="max-width:100% max-height: 798px">
-			  <img class="mySlides" src="http://www.robertsasaki.com/images/Background_01.jpg" style="width:100%">
-			  <img class="mySlides" src="http://www.robertsasaki.com/images/Background_02.jpg" style="width:100%">
-			  <img class="mySlides" src="http://www.robertsasaki.com/images/Background_03.jpg" style="width:100%">
-			  <img class="mySlides" src="http://www.robertsasaki.com/images/Background_04.jpg" style="width:100%">
-			  <img class="mySlides" src="http://www.robertsasaki.com/images/Background_05.jpg" style="width:100%">
+			  <img class="mySlides" src="images/Background_01.jpg" style="width:100%">
+			  <img class="mySlides" src="images/Background_02.jpg" style="width:100%">
+			  <img class="mySlides" src="images/Background_03.jpg" style="width:100%">
+			  <img class="mySlides" src="images/Background_04.jpg" style="width:100%">
+			  <img class="mySlides" src="images/Background_05.jpg" style="width:100%">
 		</div>
 <script>
 var myIndex = 0;
